src/objects/ACCL__Tactic__c.object
<CustomObject>
    <description>Relation from a Promotion and Tactic.</description>
    <fields>
        <fullName>ACCL__Absolute_Lift__c</fullName>
        <label>Absolute Lift</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Aggregation_Category__c</fullName>
        <label>Aggregation Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Amount__c</fullName>
        <description>Tactic Cost Amount</description>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Anchor__c</fullName>
        <formula>ACCL__Promotion__r.ACCL__Anchor_Account__r.Name</formula>
        <label>Anchor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Comment__c</fullName>
        <description>Short Comment to describe the tactic</description>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Compensation_Model__c</fullName>
        <description>Which compensation model should be used for a tactic</description>
        <inlineHelpText>Rule to calculate promotion spend.</inlineHelpText>
        <label>Compensation Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LumpSum</fullName>
                    <default>true</default>
                    <label>LumpSum</label>
                </value>
                <value>
                    <fullName>WeeklyLumpSum</fullName>
                </value>
                <value>
                    <fullName>PerCase</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Condition_Creation_Incidents__c</fullName>
        <description>This field holds information about duplicate condition incidents.</description>
        <label>Condition Creation Incidents</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Condition_Creation_Levels__c</fullName>
        <description>JSON with list of effective product levels.</description>
        <label>Condition Creation Levels</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Condition_Maintenance__c</fullName>
        <description>Defines what should happen to conditions generated out of this tactic</description>
        <label>Condition Maintenance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>initial</fullName>
                    <default>true</default>
                    <label>initial</label>
                </value>
                <value>
                    <fullName>upsert</fullName>
                </value>
                <value>
                    <fullName>delete</fullName>
                </value>
                <value>
                    <fullName>freeze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Create_Default_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates when the system needs to create the default tactic condition creation definitions for the tactics when this tactic is saved in the database.</description>
        <label>Create Default Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Custom1_Date_From__c</fullName>
        <description>Start of a project specific time range (e.g. pre-dip)</description>
        <label>Custom1 Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Custom1_Date_Thru__c</fullName>
        <description>End of a project specific time range (e.g. pre-dip)</description>
        <label>Custom1 Date Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Custom2_Date_From__c</fullName>
        <description>Start of a project specific time range (e.g. post-dip)</description>
        <label>Custom2 Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Custom2_Date_Thru__c</fullName>
        <description>End of a project specific time range (e.g. post-dip)</description>
        <label>Custom2 Date Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Date_From__c</fullName>
        <description>Start date of a tactic</description>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Date_Thru__c</fullName>
        <description>End date of a tactic</description>
        <label>Date Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Effective_Brands__c</fullName>
        <description>Holds a list (Json Array) of the effective Brand SfIds of the Tactic</description>
        <label>Effective Brands</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Effective_Categories__c</fullName>
        <description>Holds a list (Json Array) of the effective Category SfIds of the Tactic.</description>
        <label>Effective Categories</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Id of the tactic that is used as reference in external systems. This id will be used by integration to import tactic specific actuals into the offplatform backend.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Filter_Criteria__c</fullName>
        <label>Filter Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Fund_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fund Type of the funds that are automatically assigned to the tactic.</description>
        <label>Fund Template</label>
        <referenceTo>ACCL__Fund_Template__c</referenceTo>
        <relationshipLabel>Tactics</relationshipLabel>
        <relationshipName>Tactics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Included__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defines if a tactic is included in a promotion</description>
        <label>Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Instore_Date_From__c</fullName>
        <description>Instore start date of a tactic</description>
        <label>In-Store Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Instore_Date_Thru__c</fullName>
        <description>Instore end date of a tactic</description>
        <label>In-Store Date Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__KPI_Value_1__c</fullName>
        <description>Writeback Synchronized KPI 1</description>
        <label>KPI Value 1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__KPI_Value_2__c</fullName>
        <description>Writeback Synchronized KPI 2</description>
        <label>KPI Value 2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__KPI_Value_3__c</fullName>
        <description>Writeback Synchronized KPI 3</description>
        <label>KPI Value 3</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__LE_Spend__c</fullName>
        <description>LE Spend KPI value to be distributed to the associated Tactic Funds based on the Funding percentage.</description>
        <label>LE Spend</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Liabilities__c</fullName>
        <description>Liability Accrual KPI value to be distributed to the associated Tactic Funds based on the Funding percentage.</description>
        <label>Liabilities</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Lift_Type__c</fullName>
        <label>Lift Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abs</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Lift_Value__c</fullName>
        <label>Lift Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Lift__c</fullName>
        <label>Lift</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACCL__OI_Costs__c</fullName>
        <description>OI Costs KPI value to be distributed to the associated Tactic Funds based on the Funding percentage.</description>
        <label>OI Costs</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Parent_Tactic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the tactic in the parent promotion that caused the creation of this tactic</description>
        <label>Parent Tactic</label>
        <referenceTo>ACCL__Tactic__c</referenceTo>
        <relationshipLabel>Child Tactics</relationshipLabel>
        <relationshipName>ChildTactics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Payment_Method__c</fullName>
        <description>Which payment method should be used for a tactic</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deduction</fullName>
                    <default>true</default>
                    <label>Deduction</label>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>OnInvoice</fullName>
                </value>
                <value>
                    <fullName>OffInvoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Pct_of_Stores__c</fullName>
        <defaultValue>1</defaultValue>
        <label>% of Stores</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACCL__Pending_Amount__c</fullName>
        <label>Pending Payment</label>
        <summarizedField>ACCL__Payment_Tactic__c.ACCL__This_Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ACCL__Payment_Tactic__c.ACCL__Payment_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ACCL__Payment_Tactic__c.ACCL__Payment_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ACCL__Payment_Tactic__c.ACCL__Payment_Status__c</field>
            <operation>notEqual</operation>
            <value>Adjusted</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ACCL__Payment_Tactic__c.ACCL__Adjustment_Type__c</field>
            <operation>notEqual</operation>
            <value>Payment Reversal</value>
        </summaryFilterItems>
        <summaryForeignKey>ACCL__Payment_Tactic__c.ACCL__Tactic__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ACCL__Plan_Spend__c</fullName>
        <label>Plan Spend</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Promotion_Description__c</fullName>
        <formula>HYPERLINK(&quot;/one/one.app#/sObject/&quot; &amp; ACCL__Promotion__r.Id &amp; &quot;/view&quot;, ACCL__Promotion__r.ACCL__Slogan__c)</formula>
        <label>Slogan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Promotion_Phase__c</fullName>
        <formula>TEXT(ACCL__Promotion__r.ACCL__Phase__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Promotion__c</fullName>
        <description>Reference to the promotion</description>
        <label>Promotion</label>
        <referenceTo>ACCL__Promotion__c</referenceTo>
        <relationshipLabel>Tactics</relationshipLabel>
        <relationshipName>Tactics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACCL__RECORD_LINK, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <formula>TEXT(ACCL__Tactic_Template__r.ACCL__Sales_Org__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Scenario_Participation__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Bitlist defining the scenario participation (only the first 5 bits are used).</description>
        <label>Scenario Participation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Shipment_Date_From__c</fullName>
        <description>Shipment start date of a tactic</description>
        <label>Shipment Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Shipment_Date_Thru__c</fullName>
        <description>Shipment end date of a tactic</description>
        <label>Shipment Date Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Tactic_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the tactic template</description>
        <label>Tactic Template</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Tactic template does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>ACCL__Tactic_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Tactic_Template__c</referenceTo>
        <relationshipLabel>Tactics</relationshipLabel>
        <relationshipName>Tactics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Tactic_Type__c</fullName>
        <formula>ACCL__Tactic_Template__r.ACCL__Description__c</formula>
        <label>Tactic Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Tier_Definition__c</fullName>
        <description>Json structure which contains the tiers for the tactic.</description>
        <label>Tier Definition</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__To_Date_Paid_Amount__c</fullName>
        <label>To-Date Paid</label>
        <summarizedField>ACCL__Payment_Tactic__c.ACCL__This_Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ACCL__Payment_Tactic__c.ACCL__Payment_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ACCL__Payment_Tactic__c.ACCL__Adjustment_Type__c</field>
            <operation>notEqual</operation>
            <value>Payment Reversal</value>
        </summaryFilterItems>
        <summaryForeignKey>ACCL__Payment_Tactic__c.ACCL__Tactic__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ACCL__Total_Plan_Spend__c</fullName>
        <description>Sum of all Plan Spends of Funds</description>
        <label>Total Plan Spend</label>
        <summarizedField>ACCL__Tactic_Fund__c.ACCL__Plan_Spend__c</summarizedField>
        <summaryForeignKey>ACCL__Tactic_Fund__c.ACCL__Tactic__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Tactic</label>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Tactic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tactics</pluralLabel>
    <recordTypes>
        <fullName>ACCL__Display</fullName>
        <active>true</active>
        <label>Display</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__DisplayPerAbs</fullName>
        <active>true</active>
        <label>Display PerAbs</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__PriceReduction</fullName>
        <active>true</active>
        <label>Price Reduction</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__PriceReductionPerAbs</fullName>
        <active>true</active>
        <label>Price Reduction PerAbs</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Avoid_Change_External_ID</fullName>
        <active>true</active>
        <description>ExternalId can&apos;t be edited if it has an existent value.</description>
        <errorConditionFormula>AND (
  ISCHANGED(ACCL__ExternalId__c),
  NOT(ISBLANK(PRIORVALUE(ACCL__ExternalId__c)))
)</errorConditionFormula>
        <errorDisplayField>ACCL__ExternalId__c</errorDisplayField>
        <errorMessage>ExternalId can&apos;t be edited if it has an existent value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Custom1_Date_From_and_Thru_Validation</fullName>
        <active>true</active>
        <description>Custom1 Date From can&apos;t be later than Custom1 Date Thru</description>
        <errorConditionFormula>ACCL__Custom1_Date_From__c  &gt;  ACCL__Custom1_Date_Thru__c</errorConditionFormula>
        <errorMessage>Custom1 Date From can&apos;t be later than Custom1 Date Thru.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Custom2_Date_From_and_Thru_Validation</fullName>
        <active>true</active>
        <description>Custom2 Date From can&apos;t be later than Custom2 Date Thru</description>
        <errorConditionFormula>ACCL__Custom2_Date_From__c  &gt;  ACCL__Custom2_Date_Thru__c</errorConditionFormula>
        <errorMessage>Custom2 Date From can&apos;t be later than Custom2 Date Thru.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__I_date_from_less_or_equal_i_date_thru</fullName>
        <active>true</active>
        <description>Instore Date From can&apos;t be later than Instore Date Thru.</description>
        <errorConditionFormula>ACCL__Instore_Date_From__c  &gt;  ACCL__Instore_Date_Thru__c</errorConditionFormula>
        <errorDisplayField>ACCL__Instore_Date_From__c</errorDisplayField>
        <errorMessage>Instore Date From can&apos;t be later than Instore Date Thru.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Prevent_Tactic_Template_Change</fullName>
        <active>true</active>
        <description>The Tactic Template can&apos;t be edited after Tactic creation.</description>
        <errorConditionFormula>ISCHANGED( ACCL__Tactic_Template__c )</errorConditionFormula>
        <errorDisplayField>ACCL__Tactic_Template__c</errorDisplayField>
        <errorMessage>The Tactic Template can&apos;t be edited after Tactic creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__S_date_from_less_or_equal_s_date_thru</fullName>
        <active>true</active>
        <description>Shipment Date From can&apos;t be later than Shipment Date Thru</description>
        <errorConditionFormula>ACCL__Shipment_Date_From__c  &gt;  ACCL__Shipment_Date_Thru__c</errorConditionFormula>
        <errorDisplayField>ACCL__Shipment_Date_From__c</errorDisplayField>
        <errorMessage>Shipment Date From can&apos;t be later than Shipment Date Thru.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Validation_Tactic_Included</fullName>
        <active>true</active>
        <description>The tactic can&apos;t be excluded if the promotion related is defined as sellable promotion</description>
        <errorConditionFormula>AND(ISPICKVAL(ACCL__Promotion__r.ACCL__Promotion_Template__r.ACCL__Promotion_Type__c, &apos;SellablePromotion&apos; ) ,isChanged(ACCL__Included__c),ACCL__Included__c == false)</errorConditionFormula>
        <errorMessage>The tactic can&apos;t be excluded if the promotion related is defined as sellable promotion.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__date_from_less_or_equal_date_thru</fullName>
        <active>true</active>
        <errorConditionFormula>ACCL__Date_From__c  &gt;   ACCL__Date_Thru__c</errorConditionFormula>
        <errorDisplayField>ACCL__Date_From__c</errorDisplayField>
        <errorMessage>Date From can&apos;t be later than Date Thru.</errorMessage>
    </validationRules>
</CustomObject>